NIFI-12358 Corrected syntax for Java 8
Signed-off-by: David Handermann <exceptionfactory@apache.org>